--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,3 @@
-@import 'tailwindcss';
-@import 'bootstrap/dist/css/bootstrap.min.css';
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
